--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Compass</title>
+    <title>Compass with Geolocation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="compass">
         <div id="needle"></div>
+    </div>
+    <div id="location">
+        <p>Latitude: <span id="latitude"></span></p>
+        <p>Longitude: <span id="longitude"></span></p>
     </div>
     <script src="script.js"></script>
 </body>
